--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,17 @@
     "serve": "vite preview --port 3000"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.2",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
     "terser": "^5.44.0",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.42.0",
     "vite": "^7.1.2"
   },
   "dependencies": {
